<resources>
    <string name="app_name">Chennai Red Knights</string>

    <!-- Tool names -->
    <string name="home">Home</string>
    <string name="request">Create Request</string>
    <string name="current">Current Request</string>
    <string name="response">View Response</string>
    <string name="donors">View Donors</string>
    <string name="updateprofile">Update Profile</string>
    <string name="feedback">Help and Feedback</string>
    <string name="locateDonar">Donar Location</string>
    <string name="about">About</string>
    <string name="donorlist">Donors</string>
    <string name="organizers">Organizers</string>
    <string name="moreDonors">More Donors</string>
    <string name="signup"><u><b>Signup</b></u></string>

    <!-- Tool descriptions -->
    <string name="clamps_description">Whenever you need to keep two work pieces together, clamps are a great solution. A variety of different types of clamps allow you to apply the correct pressure in the right direction for any project need.</string>
    <string name="saws_description">An essential part of any woodworker\'s tool chest, saws let you easily and quickly shape wood for whatever you may be working on. Different saw specialize in ripping, crosscutting, or even miter cuts.</string>
    <string name="drills_description">When you need more staying power than a hammer and nail can provide, drills and screws are your best bet. Drills can also create holes for inserting dowels and other pieces.</string>
    <string name="sanders_description">Before finishing your woodworking project, you will want to sand it smooth. This lets the wood take on the finish more evenly and also improves both its appearance and its feel.</string>
    <string name="routers_description">A router is one of those tools that you don\'t think you need until after you\'ve used it; then you wonder how you lived without one! Routers can perform aesthetic functions like shaping decorative trim, but they can also provide functions core to woodworking like ensuring two pieces are perfectly flush.</string>
    <string name="more_description">There are countless tools because there are countless projects. Whatever you might need to do, you can surely find a tool that matches your exact needs.</string>
    <string name="title_activity_tool_detail">ToolDetailActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>
    <string name="action_filter">Filter</string>

    <!-- Strings related to login -->
    <string name="prompt_mobile_number">Mobile Number</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Log In</string>
    <string name="action_sign_out">Log Out</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="date_picker_title">Select Date</string>
    <string name="slide1Title">Be a Donor</string>
    <string name="slide1Text">The Blood Donor of today may be a recipient of tomorrow.</string>
    <string name="slide2Title">Become a Hero!</string>
    <string name="slide2Text">If you’re a blood donor, you’re a hero to someone, somewhere, who received your gracious gift of life.</string>
    <string name="slide3Title">Start to Donate</string>
    <string name="slide3Text">Five minutes of your time + 350ml. of your blood = One life saved.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_donor_respond">DonorRespondActivity</string>
    <string name="have_you_donated_before">Have you donated before</string>
    <string name="last_donation_date">Last donation date</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="chennai_red_knights">Chennai Red Knights</string>
    <string name="email">Email</string>
    <string name="home_location">Home Location</string>
    <string name="gender">Gender</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="sign_up">Sign Up</string>
    <string name="first_name">First name</string>
    <string name="mobile_number">Mobile number</string>
    <string name="blood_group">Blood group</string>
    <string name="last_name">Last name</string>
    <string name="of">&#032;of&#032;</string>
    <string name="needed">&#032;needed</string>
    <string name="donate">Donate</string>
    <string name="error">Error</string>
    <string name="network_error_message">Unable to load blood donation requests now. Please try later</string>
    <string name="empty_blood_requests">No pending blood requests :)</string>
    <string name="retry">Retry</string>
    <string name="patient_name">Patient name</string>
    <string name="hospital">Hospital</string>
    <string name="contact_number">Contact number</string>
    <string name="units_required">Units required</string>
    <string name="donation_date">Donation date</string>
    <string name="time">Time</string>
    <string name="city">City</string>
    <string name="i_donate">I Donate</string>
    <string name="units">Units</string>
    <string name="reason">Reason</string>
    <string name="alternate_number">Alternate Number</string>
    <string name="hospital_details">Hospital Details</string>
    <string name="address_line_1">Address Line 1</string>
    <string name="address_line_2">Address Line 2</string>
    <string name="address_line_3">Address Line 3</string>
    <string name="submit">Submit</string>
    <string name="error_patient_name">Please enter the patient\'s name</string>
    <string name="error_donation_date">Please choose the donation date</string>
    <string name="error_mobile_number">Please enter your contact number</string>
    <string name="error_alternate_mobile_number">Please enter an alternate contact number</string>
    <string name="error_hospital_address">Please enter the hospital address</string>
    <string name="error_number_of_units">Please enter a value more than 0.5</string>
    <string name="error_gender">Please select your gender</string>
    <string name="error_blood_group">Please select your blood group</string>

    <plurals name="unit">
        <item quantity="one">unit</item>
        <item quantity="other">units</item>
    </plurals>

    <string-array name="number">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>

    </string-array>

</resources>
