<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <import type="android.view.View"/>
        <variable
            name="bloodRequest"
            type="com.auidbook.prototype.Model.BloodRequest" />

        <variable
            name="eventHandler"
            type="com.auidbook.prototype.RecipientDetailsFragment" />

        <variable
            name="isLoading"
            type="boolean" />
    </data>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="1">

        <LinearLayout android:orientation="vertical"
            android:gravity="center"
            android:alpha="0.5"
            android:visibility="@{isLoading ? View.VISIBLE : View.GONE}"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                style="@android:style/Widget.ProgressBar.Large"
                android:indeterminate="true"
                android:visibility="@{isLoading ? View.VISIBLE : View.GONE}" />
        </LinearLayout>

        <TableRow android:layout_height="60sp">

            <TextView
                android:text="@string/blood_group"
                android:textColor="?android:attr/textColorHint"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:text="@{bloodRequest.bloodGroup.toString()}"
                android:textColor="?android:attr/textColorHintInverse"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </TableRow>

        <TableRow android:layout_height="60sp">

            <TextView
                android:text="@string/patient_name"
                android:textColor="?android:attr/textColorHint"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:text="@{bloodRequest.patientName}"
                android:textColor="?android:attr/textColorHintInverse"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </TableRow>

        <TableRow android:layout_height="60sp">

            <TextView
                android:text="@string/hospital"
                android:textColor="?android:attr/textColorHint"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:text="@{bloodRequest.hospitalName}"
                android:textColor="?android:attr/textColorHintInverse"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </TableRow>

        <TableRow android:layout_height="60sp">

            <TextView
                android:text="@string/contact_number"
                android:textColor="?android:attr/textColorHint"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:text="@{bloodRequest.contactNumber}"
                android:textColor="?android:attr/textColorHintInverse"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </TableRow>

        <TableRow android:layout_height="60sp">

            <TextView
                android:text="@string/units_required"
                android:textColor="?android:attr/textColorHint"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:text="@{bloodRequest.contactNumber}"
                android:textColor="?android:attr/textColorHintInverse"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </TableRow>

        <TableRow android:layout_height="60sp">

            <TextView
                android:text="@string/donation_date"
                android:textColor="?android:attr/textColorHint"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:text="@{bloodRequest.formattedDonationDate}"
                android:textColor="?android:attr/textColorHintInverse"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </TableRow>

        <TableRow android:layout_height="60sp">

            <TextView
                android:text="@string/time"
                android:textColor="?android:attr/textColorHint"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:text="@{bloodRequest.donationTime}"
                android:textColor="?android:attr/textColorHintInverse"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </TableRow>

        <TableRow android:layout_height="60sp">

            <TextView
                android:text="@string/city"
                android:textColor="?android:attr/textColorHint"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:text="@{bloodRequest.city}"
                android:textColor="?android:attr/textColorHintInverse"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </TableRow>

        <TableRow android:gravity="center">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="60sp"
                android:onClick="@{eventHandler::donateButtonClicked}"
                android:text="@string/i_donate" />
        </TableRow>
    </TableLayout>
</layout>