<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="bloodRequest"
            type="com.auidbook.prototype.Model.BloodRequest" />

        <variable
            name="isReadOnly"
            type="boolean" />

        <variable
            name="isLoading"
            type="boolean" />

        <variable
            name="eventHandler"
            type="com.auidbook.prototype.RequestDetailsFragment" />

        <import type="android.view.View" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:alpha="0.5"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="@{isLoading ? View.VISIBLE : View.GONE}">

                <ProgressBar
                    style="@android:style/Widget.ProgressBar.Large"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:indeterminate="true"
                    android:visibility="@{isLoading ? View.VISIBLE : View.GONE}" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="@{isLoading ? View.GONE : View.VISIBLE}">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/chennai_red_knights"
                    android:src="@drawable/crklogo" />

                <fr.ganfra.materialspinner.MaterialSpinner
                    android:id="@+id/blood_group_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3dp"
                    android:layout_marginEnd="3dp"
                    android:paddingStart="0dp"
                    android:paddingEnd="0dp"
                    android:enabled="@{!isReadOnly}"
                    app:ms_enableFloatingLabel="true"
                    app:ms_floatingLabelColor="?android:attr/textColorHint"
                    app:ms_floatingLabelText="@string/blood_group"
                    app:ms_hint="@string/blood_group"
                    app:ms_alignLabels="false"
                    app:ms_hintColor="?android:attr/textColorHint"
                    app:ms_multiline="false" />

                <fr.ganfra.materialspinner.MaterialSpinner
                    android:id="@+id/gender_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="3dp"
                    android:layout_marginStart="3dp"
                    android:enabled="@{!isReadOnly}"
                    android:paddingEnd="0dp"
                    android:paddingStart="0dp"
                    app:ms_alignLabels="false"
                    app:ms_enableFloatingLabel="true"
                    app:ms_floatingLabelColor="?android:attr/textColorHint"
                    app:ms_floatingLabelText="@string/gender"
                    app:ms_hint="@string/gender"
                    app:ms_hintColor="?android:attr/textColorHint"
                    app:ms_multiline="false" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/txtView_Patient"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp">

                    <EditText
                        android:textColor="@drawable/text_color"
                        android:id="@+id/edt_patient_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="@{!isReadOnly}"
                        android:hint="@string/patient_name"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:text="@{bloodRequest.patientName}" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/numberOfUnitsTIL"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp">

                    <EditText
                        android:textColor="@drawable/text_color"
                        android:id="@+id/numberOfUnits"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:digits="0123456789."
                        android:enabled="@{!isReadOnly}"
                        android:hint="@string/units"
                        android:inputType="number"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:text="@{String.valueOf(bloodRequest.numberOfUnits)}" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/txtView_DateOfDonation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp">

                    <EditText
                        android:textColor="@drawable/text_color"
                        android:id="@+id/edt_date_of_donation"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="@{!isReadOnly}"
                        android:onClick="@{eventHandler::donationDateClicked}"
                        android:focusable="false"
                        android:hint="@string/donation_date"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:inputType="datetime"
                        android:text="@{bloodRequest.formattedDonationDate}" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/txtView_MobileNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp">

                    <EditText
                        android:textColor="@drawable/text_color"
                        android:id="@+id/edt_mobile_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="@{!isReadOnly}"
                        android:hint="@string/mobile_number"
                        android:inputType="number"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:text="@{bloodRequest.contactNumber}" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/txtView_AltMoblieNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp">

                    <EditText
                        android:textColor="@drawable/text_color"
                        android:id="@+id/edt_alt_mobile_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="@{!isReadOnly}"
                        android:hint="@string/alternate_number"
                        android:inputType="number"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:text="@{bloodRequest.alternateContactNumber}" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/edtView_Reason"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp">

                    <EditText
                        android:textColor="@drawable/text_color"
                        android:id="@+id/edt_Reason"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="@{!isReadOnly}"
                        android:hint="@string/reason"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:text="@{bloodRequest.reason}" />
                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:paddingTop="10dp"
                    android:text="@string/hospital_details"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/black" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/txtView_AddressLine1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:textColor="@drawable/text_color"
                        android:id="@+id/edt_addressline1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="@{!isReadOnly}"
                        android:hint="@string/address_line_1"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:text="@{bloodRequest.address}" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/txtView_AddressLine2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:textColor="@drawable/text_color"
                        android:id="@+id/edt_addressline2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="@{!isReadOnly}"
                        android:hint="@string/address_line_2"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:text="@{bloodRequest.addressLineTwo}" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/txtView_AddressLine3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:textColor="@drawable/text_color"
                        android:id="@+id/edt_addressline3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="@{!isReadOnly}"
                        android:hint="@string/address_line_3"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:text="@{bloodRequest.addressLineThree}" />

                </android.support.design.widget.TextInputLayout>

                <Button
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/mybutton"
                    android:onClick="@{eventHandler::submitButtonClicked}"
                    android:text="@string/submit"
                    android:textColor="#ffffff"
                    android:textStyle="bold"
                    android:visibility="@{isReadOnly ? View.GONE : View.VISIBLE }" />

                <Button
                    android:id="@+id/btnSubmitRequest"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/mybutton"
                    android:onClick="@{eventHandler::donateButtonClicked}"
                    android:text="@string/i_donate"
                    android:textColor="#ffffff"
                    android:textStyle="bold"
                    android:visibility="@{isReadOnly ? View.VISIBLE : View.GONE }" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</layout>